# dextreamer

./: Cargo.toml  README.md
.github/workflows/: publish.yml  rust.yml
src/: event_debounce.rs  frame_handler.rs  lib.rs  playbin_query.rs  streamer.rs  video_info.rs  video_sink.rs
