[package]
name = "dextreamer"
version = "0.1.0"
edition = "2021"
description = "A sleek and simple wrapper around gstreamer for handling video streams in Rust"
keywords = ["gstreamer", "multimedia", "video", "codec", "video-processing"]
categories = ["multimedia::video", "multimedia::audio"]
authors = ["Anton Suprunchuk <anton.suprunchuk@gmail.com>"]
license = "Apache-2.0/MIT"
repository = "https://github.com/antouhou/dextreamer"
documentation = "https://docs.rs/dextreamer"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstreamer = "0.20.3"
gstreamer-base = "0.20.0"
gstreamer-app = "0.20.0"
gstreamer-video = "0.20.4"
